// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createStyles: simple rules 1`] = `
{
  "base": {
    "className": "base__1f8ei0o p_2h8kl40 p4c01gd6 p10v3vx6",
    "stylesheet": [
      ".p_2h8kl40{fontz-size:16px;}",
      ".p4c01gd6{line-height:1.5;}",
      ".p10v3vx6{color:rgb(60,60,60);}",
    ],
  },
  "highlighted": {
    "className": "highlighted_g28n4j p91m869",
    "stylesheet": [
      ".p91m869{color:rebeccapurple;}",
    ],
  },
}
`;

exports[`createStyles: Pseudo-classes 1`] = `
{
  "button": {
    "className": "button__8iz41n p2l5cglg",
    "stylesheet": [
      ".p2l5cglg{background-color:lightblue;}",
    ],
  },
}
`;

exports[`createStyles: Pseudo-classes 2`] = `
{
  "button": {
    "className": "button_1tjvtxt p2l5cglg p1sj0k0a p3ni2mzo",
    "stylesheet": [
      ".p2l5cglg{background-color:lightblue;}",
      ".p1sj0k0a{&:hover{background-color:blue;}}",
      ".p3ni2mzo{&:active{background-color:darkblue;}}",
    ],
  },
}
`;

exports[`createStyles: Pseudo-elements 1`] = `
{
  "input": {
    "className": "input_1etkoss pqpi8rk p_1uwdrog",
    "stylesheet": [
      ".pqpi8rk{color:#333;}",
      ".p_1uwdrog{&:invalid{color:red;}}",
    ],
  },
}
`;

exports[`createStyles: media query 1`] = `
{
  "base": {
    "className": "base_3d4s76s paqr07x p_3zvevs7 p_l1op19",
    "stylesheet": [
      ".paqr07x{width:800;}",
      ".p_3zvevs7{@media (max-width: 800px){width:100%;}}",
      ".p_l1op19{@media (min-width: 1540px){width:1366;}}",
    ],
  },
}
`;

exports[`createStyles: combining conditions 1`] = `
{
  "button": {
    "className": "button_mb2ltj p_2dr9p51 p_d33wg2 p_1bahz5i",
    "stylesheet": [
      ".p_2dr9p51{color:var(--blue-link);}",
      ".p_d33wg2{&:hover{@media (hover: hover){color:scale(1.1);}}}",
      ".p_1bahz5i{&:active{color:scale(0.9);}}",
    ],
  },
}
`;

exports[`JSX: spread 1`] = `
{
  "$": "🦄",
  "client": [
    "<button ",
    "class="button_mb2ltj p_2dr9p51 p_d33wg2 p_1bahz5i" ",
    ">",
    "</button>",
  ],
  "registry":   Set {},
  "server": [
    "<button ",
    "class="button_mb2ltj p_2dr9p51 p_d33wg2 p_1bahz5i" ",
    ">",
    "</button>",
  ],
  "stylesheets":   
Set {
    ".p_2dr9p51{color:var(--blue-link);}",
    ".p_d33wg2{&:hover{@media (hover: hover){color:scale(1.1);}}}",
    ".p_1bahz5i{&:active{color:scale(0.9);}}",
  }
,
}
`;
